--- a/index.html
+++ b/index.html
@@ -2,9 +2,33 @@
 <html>
   <head>
     <title>Los lenguajes del navegador</title>
+
   </head>
 
   <body>
-    <!-- Agrega tu código aquí -->
+<p>  "HTML significa HyperText Markup Language y se utiliza para crear la estructura y el contenido de una página web."</p>
   </body>
+  <div>
+    <h1>Los lenguajes del navegador</h1>
+    <h3>HTML, CSS y JavaScript</h3>
+  </div>
+     
+      <div><div>
+    <h2>¿Qué es HTML?</h2>
+  
+    <p>
+      HTML significa HyperText Markup Language y se utiliza para crear la
+      estructura y el contenido de una página web.
+    </p>
+  
+    <h5>Puntos clave:</h5>
+  
+    <p>HTML es un lenguaje muy sencillo compuesto de elementos.</p>
+  
+    <p>
+      Un elemento HTML normalmente consta de una etiqueta de inicio y una etiqueta
+      de finalización, con el contenido insertado entre ambas.
+    </p>
+  </div>
+  </div>
 </html>
